--- a/src/style.css
+++ b/src/style.css
@@ -5,41 +5,78 @@
     min-height: 500px;
     background-color: #C4C4C4;
     margin: auto;
+    opacity: 0.1;
 }
 
 .movie-search-input {
-    max-width: 400px;
-    height: 25px;
+    position: absolute;
+    top: 30%;
+    right: 27%;
+    width: 68%;
+    height: 30px;
     margin-left: 10%;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
+    padding: 2px;
     background-color: #efefef;
     border-radius: 5px;
+    border: none;
     font-size: 18px;
+    font-family: 'Ubuntu', sans-serif;
     outline: none;
+    opacity: 0.5;
+    z-index: 1;
 }
 
 .button-search {
-    width: 80px;
-    height: 30px;
+    position: absolute;
+    top: 20%;
+    right: 18%;
+    width: 40px;
+    /*height: 30px;*/
     margin-left: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     cursor: pointer;
     text-align: center;
-    background-color: forestgreen;
-    color: #FFF;
+    background: transparent;
+    color: forestgreen;
+    font-family: 'starjedi';
     font-weight: bold;
-    font-size: 12px;
-    border: 1px solid forestgreen;
-    border-radius: 5px;
+    /*font-size: 12px;*/
+    border: none;
     outline: none;
+    z-index: 1;
     transition: transform .03s ease-in-out;
 }
 
 .button-search:hover {
-    background-color: #e1e1e1;
-    color: forestgreen;
+    transform: scale(1.1);
 }
 
 .button-search:active {
     transform: scale(0.9);
+}
+
+.button-img {
+    height: 65px;
+    margin-left: 20%;
+}
+
+.search-panel {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
+    min-height: 150px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    
+}
+
+.search-panel-img {
+    position: absolute;
+    top: 25%;
+    right: 20%;
+    width: 82%;
+    margin-top: 0;
+    z-index: -1;
 }
