--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@font-face{
+@font-face {
     font-family: Star-Jedi;
     src: url(fonts/starjedi/Starjedi.ttf);
 }
@@ -7,15 +7,24 @@
     font-family: Star-Jedi-Hol;
     src: url(fonts/starjedi/Starjhol.ttf);
 }
-.b-body{
-    background-color: #000000;
-    position: relative;
+
+:root {
+    --star-orange: #FFA813;
+    --dark-side-red: #E60813;
+    --lightsaber-green: rgb(0, 184, 0);
 }
+
+.b-body {
+    position: relative;
+    color: white;
+    background-image: url("images/space-1164579.png");
+}
+
 .b-body__content {
     width: 100%;
 }
 
-.header{
+.header {
     text-align: center;
     line-height: 0rem;
     box-sizing: border-box;
@@ -24,78 +33,89 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
 }
-.header__background--video{
+
+.header__background--video {
     min-width: 100%;
     max-width: 100%;
     position: absolute;
     z-index: -1;
 }
-.b-main__image{
+
+.b-main__image {
     position: absolute;
     width: 14.5rem;
     height: 14.5rem;
-    background-size: cover; 
+    background-size: cover;
     background-position: center;
-    margin:0;
-   
+    margin: 0;
+
 }
+
 .b-main__image-first--back-img {
     background-image: url(images/starwars_PNG56.png);
 }
+
 .b-main__image-first--position {
     top: 5%;
     left: 2%;
 }
-.b-main__image-second--back-img{
+
+.b-main__image-second--back-img {
 
     background-image: url(images/spaceship-2844250_1280.png);
 }
-.b-main__image-second--position{
+
+.b-main__image-second--position {
     top: 56%;
-    left:40%;
+    left: 40%;
 }
-.b-main__image-second--big-size{
+
+.b-main__image-second--big-size {
     width: 25rem;
     height: 22rem;
 }
 
-.b-main__image-second--angel{
-  transform: rotate(-25deg);
+.b-main__image-second--angel {
+    transform: rotate(-25deg);
 }
 
- .header_caption-first{
-     font-family: Star-Jedi;
-     font-size: 3rem;
+.header_caption-first {
+    font-family: Star-Jedi;
+    font-size: 3rem;
     -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color:#2999D4;
-    -webkit-text-stroke-color:#ffffff;
- }
-.b-header__caption-second{
+    -webkit-text-stroke-color: #2999D4;
+    -webkit-text-stroke-color: #ffffff;
+}
+
+.b-header__caption-second {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
 }
- .b-header__content-caption-second{
-     padding: 4rem; 
-     margin-bottom: 1rem;
-    
- }
-.b-header__content-caption-second__header{
+
+.b-header__content-caption-second {
+    padding: 4rem;
+    margin-bottom: 1rem;
+
+}
+
+.b-header__content-caption-second__header {
     font-family: Star-Jedi-Hol;
     font-size: 10.5rem;
-    color:#E60813;
+    color: #E60813;
     margin: 0;
 }
 
-.header__caption-third{
+.header__caption-third {
     font-family: Star-Jedi;
     font-size: 2rem;
     -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color:#ffffff;
+    -webkit-text-stroke-color: #ffffff;
 }
+
 .main-section {
     display: flex;
     flex-direction: column;
@@ -104,24 +124,27 @@
     margin: 0;
     padding: 0;
 }
-.main-section__article{
-   width: 100%;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   position: relative;
-   
+
+.main-section__article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+
 }
-.main-section__content-input{
+
+.main-section__content-input {
     /* min-height: 15rem; */
-    text-align: center; 
+    text-align: center;
 }
+
 .movie-search-input {
     position: absolute;
     top: 35%;
     left: 5%;
     width: 80%;
-    height:25%;
+    height: 25%;
     padding: 2%;
     margin-bottom: 0px;
     padding: 2px;
@@ -133,16 +156,18 @@
     background: rgba(255, 255, 255, 0.4);
     z-index: 1;
     padding: 2%;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;  
+    -webkit-box-sizing: border-box;
+    /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;
+    /* Firefox, other Gecko */
+    box-sizing: border-box;
 }
 
 .button-search {
     font-family: Star-Jedi;
     font-size: 1.5rem;
-   -webkit-text-stroke-width:2px;
-   -webkit-text-stroke-color:  #FFA813;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: var(--star-orange);
     position: absolute;
     bottom: 18%;
     right: 6%;
@@ -158,19 +183,23 @@
     z-index: 1;
     transition: transform .03s ease-in-out;
 }
+
 .button-search:hover {
     transform: scale(1.1);
 }
+
 .button-search:active {
     transform: scale(0.9);
 }
+
 .button-img {
-    position:absolute;
+    position: absolute;
     height: 6.5rem;
-    bottom:65%;
-    left:50%;
+    bottom: 65%;
+    left: 50%;
     /* margin-left: 20%; */
 }
+
 .search-panel {
     position: relative;
     margin-left: auto;
@@ -181,54 +210,63 @@
     padding: 2%;
     display: inline-block;
 }
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+
+::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #000000;
-    opacity: 1; /* Firefox */
-  }
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    opacity: 1;
+    /* Firefox */
+}
+
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
     color: #000000;
-  }
-  ::-ms-input-placeholder { /* Microsoft Edge */
+}
+
+::-ms-input-placeholder {
+    /* Microsoft Edge */
     color: #000000;
-  }
-.search-panel-img { 
+}
+
+.search-panel-img {
     position: absolute;
     top: 20%;
-    right:5%;
+    right: 5%;
     width: 100%;
     margin-top: 0;
-    z-index: -1;   
+    z-index: -1;
 }
-.main-section__content-input__caption-nothing-finded{
+
+.main-section__content-input__caption-nothing-finded {
     position: absolute;
     color: white;
     font-size: 8rem;
     margin: 1%;
     font-family: Star-Jedi;
-    color: #FFA813;
+    color: var(--star-orange);
     margin: 0;
-    margin-top:2%;
-    top :55%;
+    margin-top: 2%;
+    top: 55%;
 }
-.main-section__content-items{
+
+.main-section__content-items {
     position: relative;
     text-align: center;
     margin-top: 10rem;
 }
-.main-section__content-items--back-color{
-    background-color: #000000;
-}
 
-.main-section__content-items__list__cards{
+
+.main-section__content-items__list__cards {
     width: 97%;
     display: grid;
     grid-gap: 4rem;
     grid-template-columns: repeat(auto-fill, 27rem);
     justify-content: center;
-    margin: 8rem 0 8rem 0 ;
+    margin: 8rem 0 8rem 0;
     align-items: center;
 }
-.card{
+
+.card {
     width: 24.8rem;
     height: 19rem;
     border-radius: 4%;
@@ -240,17 +278,19 @@
     padding: 1rem;
     width: 100%;
     background-size: cover;
-    box-shadow: #000000,5px;
+    box-shadow: #000000, 5px;
     background-position: center;
 }
-.card--shadow{
+
+.card--shadow {
     -webkit-box-shadow: 5px 5px 5px 1px rgba(255, 248, 248, 0.75);
     -moz-box-shadow: 5px 5px 5px 1px rgba(255, 255, 255, 0.75);
     box-shadow: 10px 5px 10px 1px rgba(255, 255, 255, 0.75);
 }
-.card__bacground--transparency{
+
+.card__bacground--transparency {
     position: absolute;
-    top:0.2rem;
+    top: 0.2rem;
     left: 0.2rem;
     width: 99%;
     min-height: 99%;
@@ -259,94 +299,231 @@
     opacity: 0.6;
     filter: alpha(opacity=60);
 }
-.b-card__content{
+
+.b-card__content {
     position: absolute;
     box-sizing: border-box;
     word-wrap: break-word;
     max-width: 14rem;
 }
-.b-card__header{
-    border-bottom: white 0.01rem solid ;
-    min-width: 20rem; 
-    text-align: center; 
+
+.b-card__header {
+    border-bottom: white 0.01rem solid;
+    min-width: 20rem;
+    text-align: center;
     /* padding: 0.5rem; */
     box-sizing: border-box;
-    line-height:0.5rem;
-    
-}
-.b-card__header__caption{
-     font-size: 28px;
-     color:#FFA813;
-     font-family: 'Ubuntu',
-     sans-serif;
+    line-height: 0.5rem;
+
 }
 
-.b-card__header--position{
-    top:1rem;
-    left:4.3rem;
-    
+.b-card__header__caption {
+    font-size: 28px;
+    color: var(--star-orange);
+    font-family: 'Ubuntu',
+        sans-serif;
 }
+
+.b-card__header--position {
+    top: 1rem;
+    left: 4.3rem;
+
+}
+
 .card__subtitle--red {
-    color: #E60813;
+    color: var(--dark-side-red);
 }
 
 
-.card__subtitle{
+.card__subtitle {
     font-size: 22px;
     font-family: 'Lemonada',
-    cursive;
+        cursive;
     margin: 0;
     padding: 0;
-    line-height:2rem;
-    
+    line-height: 2rem;
+
 }
-.card__content-director--position{
-    top:6rem;
-    left:0.5rem;
+
+.card__content-director--position {
+    top: 6rem;
+    left: 0.5rem;
 }
-.card__content-producer{
+
+.card__content-producer {
     min-width: 12rem;
     min-height: 6.5rem;
     margin: 0;
 }
-.card__content-producer--position{
+
+.card__content-producer--position {
     right: 2rem;
-    top:8.5rem;
+    top: 8.5rem;
 }
-.card__content-date{
+
+.card__content-date {
     min-width: 12rem;
     /* border: solid red; */
 }
+
 .card__content-date--position {
     bottom: 1.4rem;
-    left:2rem;
+    left: 2rem;
 }
-.card__subtitle__name{
+
+.card__subtitle__name {
     font-family: 'Ubuntu',
-    sans-serif;
+        sans-serif;
     font-size: 19px;
     margin: 0 0 0 3rem;
 }
-.card__subtitle__name--white{
+
+.card__subtitle__name--white {
     color: white;
 }
-.card__background-first--image{
-    background-image: url(images/4oh3plg-free-star-wars-wallpaper.jpg);   
+
+.card__background-first--image {
+    background-image: url(images/4oh3plg-free-star-wars-wallpaper.jpg);
 }
-.card__background-second--image{
+
+.card__background-second--image {
     background-image: url(images/5QqOnXd-free-star-wars-wallpaper.jpg);
-    
+
 }
-.card__background-third--image{
+
+.card__background-third--image {
     background-image: url(images/ALTwMNx-free-star-wars-wallpapers.jpg)
 }
-.card__background-fourth--image{
+
+.card__background-fourth--image {
     background-image: url(images/prnDtZE-free-star-wars-wallpapers.jpg);
 }
-.card__background-fifth--image{
+
+.card__background-fifth--image {
     background-image: url(images/VCHc7zT-free-star-wars-wallpapers.jpg);
 }
-.card__background-sixth--image{
+
+.card__background-sixth--image {
     background-image: url(images/WHY12jS-free-star-wars-wallpaper.jpg);
 }
 
+nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+#navMenu {
+    display: flex;
+}
+
+.navElement {
+    margin: 5px;
+    font-family: Star-Jedi-hol;
+    font-size: 1.5rem;
+    transition: all 0.2s ease-in-out;
+}
+
+.navElement:hover {
+    color: var(--lightsaber-green);
+    text-shadow: 0 0 10px var(--lightsaber-green);
+}
+
+.title {
+    text-align: center;
+    font-size: 2.5rem;
+    font-family: Star-Jedi-hol;
+    color: var(--star-orange);
+    margin: 20px;
+}
+
+.row {
+    margin: 20px;
+}
+
+.info {
+    text-align: center;
+}
+
+.info header {
+    font-family: Star-Jedi-hol;
+    color: var(--dark-side-red);
+    font-size: 1.5rem;
+}
+
+.info span {
+    font-family: Star-Jedi;
+}
+
+.categoryName {
+    font-family: Star-Jedi-hol;
+    color: var(--star-orange);
+    font-size: 3rem;
+    margin: 20px;
+}
+
+.category {
+    font-family: Star-Jedi-Hol;
+    font-size: 1.8rem;
+    color: white;
+    text-align: center;
+    padding: 50px 0;
+    margin: 50px 0;
+    transition: all 0.2s ease-in-out;
+}
+
+.category:hover{
+    color: var(--lightsaber-green);
+}
+
+.outline {
+    position: relative;
+    text-shadow: 0 0 10px black;
+    z-index: 1;
+}
+
+.black {
+    position: absolute;
+    font-family: Star-Jedi;
+    color: black;
+    z-index: -1;
+    left: 1px;
+}
+
+.charactersCategory {
+    background-image: url("images/star-wars-2463926_1920.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+.starshipsCategory {
+    background-image: url("images/spaceship-2844248_1280.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+.vehiclesCategory {
+    background-image: url("images/starwars_PNG46.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+.planetsCategory {
+    background-image: url("images/isolated-1513342_1920.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+.element, .loading{
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: Star-Jedi;
+    transition: all 0.2s ease-in-out;
+}
+
+.element:hover {
+    color: var(--lightsaber-green);
+}
