Feature starships details view (#19)
* Add function to generate film details view

* Add styles to film details view

* Add feature to generate planets detail view

Add js file that generates planets details view and add css styles.

* Add feature to generate starships details view

Add function to generate starships view and css styles
Fix bug with click another option while one is still loading.

--- a/src/style.css
+++ b/src/style.css
@@ -531,6 +531,10 @@ nav {
     background-image: url("images/pngguru.com-id-kfsny.png");
 }
 
+.pilotsCategory{
+    background-image: url("images/luke-skywalker-boba-fett-anakin-skywalker-rey-wedge-antilles-pilot.png");
+}
+
 .element, .loading{
     text-align: center;
     font-size: 1.5rem;
@@ -540,4 +544,10 @@ nav {
 
 .element:hover {
     color: var(--lightsaber-green);
+}
+
+.nothing{
+    margin: auto;
+    font-size: 2rem;
+    font-family: Star-Jedi;
 }
