Feature back btn (#22)
*  RWD header 425px

* RWD to 425px for search section  and list card section

* RWD to 768px,1024px

* RWD 320px-2560px

* back functionality on FilmDetailView

* new_back_btn_functionality_in_details_view

* btnBack_functionality_save_history_Views

* back_functionality_add_all_views

* back_functionality

* back_functionality_allViews

* back_functionality_bug_fix

* clear code

* file_structure_changes

* new changes from master

* back_functionality/DetailsView/PlanetDetailsView-not_complite

* functionality_back_btn/in_view_details_planets

* back_btn/in_views_details_/planets_fix_bugs/vehicels/starships

* back_btn/in_view_details_characters

* fix_bugs

* fix_bugies/header/card/image

* bug_fix

* fix_bugs_header/360px-2560px

* fix_bugs_inscription_Nothing_Found/360px-2560px

* RWD_category_view/360px-2560px

* RWD_section/360px-2560px

* bugs_fix/vehicleDetilsView/elementList

* bugs_fix/charactersDetailsView

* back_btn_to_CHaracterDetails

* back_btn_in_views_details

* bugs_fixed

--- a/src/style.css
+++ b/src/style.css
@@ -65,11 +65,7 @@ body {
     width: 100%;
 }
 
-@media (min-width:2000px) {
-    .b-body__content {
-        width: 70%;
-    }
-}
+
 h1{
     line-height: 0.7;
 }
@@ -79,12 +75,10 @@ h1{
     }
 }
 
-
-
 .header {
     text-align: center;
     box-sizing: border-box;
-    margin: 1rem;
+
     word-wrap: break-word;
     display: flex;
     flex-direction: column;
@@ -115,7 +109,7 @@ h1{
 }
 
 .b-main__image-first--position {
-    top: 5%;
+    top: 1%;
     left: 2%;
 }
 
@@ -131,8 +125,8 @@ h1{
 }
 
 .b-main__image-second--position {
-    top:44rem;
-    left: 35%;
+    top:50rem;
+    left: 42%;
 }
 @media (min-width:1480px)  {
     .b-main__image-second--position {
@@ -611,6 +605,14 @@ h1{
     -webkit-box-shadow: 5px 5px 5px 1px rgba(255, 248, 248, 0.75);
     -moz-box-shadow: 5px 5px 5px 1px rgba(255, 255, 255, 0.75);
     box-shadow: 10px 5px 10px 1px rgba(255, 255, 255, 0.75);
+    transition: all 0.2s ease-in-out;
+}
+
+.card--shadow:hover{
+    -webkit-box-shadow: 5px 5px 5px 1px var(--dark-side-red);
+    -moz-box-shadow: 5px 5px 5px 1px var(--dark-side-red);
+    box-shadow: 10px 5px 10px 1px var(--dark-side-red);
+
 }
 
 .card--shadow:hover {
@@ -932,6 +934,12 @@ nav {
 .navElement:hover {
     color: var(--lightsaber-green);
     text-shadow: 0 0 10px var(--lightsaber-green);
+}
+
+
+.selected{
+    color: var(--dark-side-red);
+    text-shadow: 0 0 10px var(--dark-side-red);
 }
 
 .title {
